Field Hunt/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_ID_18__c</fullName>
        <description>This is the long Account ID, as opposed to the partial, 15-digit ID shown in URLs.</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the long Account ID, as opposed to the partial, 15-digit ID shown in URLs.</inlineHelpText>
        <label>Account ID 18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federal_Congressional_District__c</fullName>
        <description>This is the federal congressional district for the organization.</description>
        <inlineHelpText>Enter the federal congressional district for the organization.</inlineHelpText>
        <label>Federal Congressional District</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Force_Update__c</fullName>
        <description>This field is used with Jitterbit, Data Loader, or other tools to force an update of the account.</description>
        <inlineHelpText>This field is used with Jitterbit, Data Loader, or other tools to force an update of the account.</inlineHelpText>
        <label>Force Update</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMPak_Id__c</fullName>
        <externalId>true</externalId>
        <label>IMPak Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impak_Congressional_District__c</fullName>
        <description>This is the congressional district as shown at the time of the conversion from Impak.</description>
        <inlineHelpText>This is the congressional district as shown at the time of the conversion from Impak.</inlineHelpText>
        <label>Impak Congressional District</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Impak_Last_Change_By__c</fullName>
        <description>This is an imported code showing the last user or process that edited a record in Impak before migration. (LMS = Lori Miller-Shiell, CNV = Conversion, WEB = Website, etc.)</description>
        <inlineHelpText>This is an imported code showing the last user or process that edited a record in Impak before migration. (LMS = Lori Miller-Shiell, CNV = Conversion, WEB = Website, etc.)</inlineHelpText>
        <label>Impak Last Change By</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impak_Last_Change_Date__c</fullName>
        <description>This date shows the last time a record was edited in Impak before migration.</description>
        <inlineHelpText>This date shows the last time a record was edited in Impak before migration.</inlineHelpText>
        <label>Impak Last Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Impak_State_House_District__c</fullName>
        <description>This is the state house as shown at the time of the conversion from Impak.</description>
        <inlineHelpText>This is the state house as shown at the time of the conversion from Impak.</inlineHelpText>
        <label>Impak State House District</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Impak_State_Senate_District__c</fullName>
        <description>This is the state senate as shown at the time of the conversion from Impak.</description>
        <inlineHelpText>This is the state senate as shown at the time of the conversion from Impak.</inlineHelpText>
        <label>Impak State Senate District</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Level</label>
        <referenceTo>npsp__Level__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Membership_Status_for_Reports__c</fullName>
        <description>This is the text version of the Membership Status field. It is used for reporting, since it is difficult to tell which of the two identically named Membership Status fields shows an Account&apos;s MCF membership.</description>
        <formula>TEXT(gf_sf__Membership_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the text version of the Membership Status field. It is used for reporting, since it is difficult to tell which of the two identically named Membership Status fields shows an Account&apos;s MCF membership.</inlineHelpText>
        <label>Membership Status for Reports</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minnesota_House_District__c</fullName>
        <description>This is the Minnesota house district for the organization.</description>
        <inlineHelpText>Enter is the Minnesota house district for the organization.</inlineHelpText>
        <label>Minnesota House District</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minnesota_Senate_District__c</fullName>
        <description>This is the Minnesota senate district for the organization.</description>
        <inlineHelpText>Enter the Minnesota senate district for the organization.</inlineHelpText>
        <label>Minnesota Senate District</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Event_Reg__c</fullName>
        <description>This shows the date of the most recent Event Registration invoice.</description>
        <inlineHelpText>This shows the date of the most recent Event Registration invoice.</inlineHelpText>
        <label>Most Recent Event Reg</label>
        <summarizedField>Opportunity.CloseDate</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Event Registration</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Affiliated_Contacts__c</fullName>
        <description>Rolls up the number of active organizational affiliations for this account.</description>
        <inlineHelpText>Rolls up the number of active organizational affiliations for this account.</inlineHelpText>
        <label>Number of Affiliated Contacts</label>
        <summaryFilterItems>
            <field>npe5__Affiliation__c.npe5__Status__c</field>
            <operation>equals</operation>
            <value>Current</value>
        </summaryFilterItems>
        <summaryForeignKey>npe5__Affiliation__c.npe5__Organization__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Organization_Email__c</fullName>
        <label>Organization Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Previous_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Level</label>
        <referenceTo>npsp__Level__c</referenceTo>
        <relationshipLabel>Accounts (Previous Level)</relationshipLabel>
        <relationshipName>Previous_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_Cycle__c</fullName>
        <description>While all memberships run January - December, we request renewals from members in five separate cycles. This is the month in which a member foundation gets their first renewal letter.</description>
        <inlineHelpText>Pick the month in which the foundation should receive their first membership renewal letter. (October and December letters are sent requesting renewals for the following year.)</inlineHelpText>
        <label>Renewal Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A - October</fullName>
                </value>
                <value>
                    <fullName>B - December</fullName>
                </value>
                <value>
                    <fullName>C - February</fullName>
                </value>
                <value>
                    <fullName>D - May</fullName>
                </value>
                <value>
                    <fullName>E - August</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Special_Instructions__c</fullName>
        <description>Shows special requests that the member has made about how we should handle renewals.</description>
        <inlineHelpText>Enter special requests that the member has made about how we should handle renewals.</inlineHelpText>
        <label>Renewal Special Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>gf_pp__Account_Name_Plural_Formula__c</fullName>
        <description>Returns correct plural form of the Account Name to be used in merge templates.</description>
        <formula>IF( RIGHT (Name, 1)=&quot;s&quot;, Name &amp; &quot;&apos;&quot;, Name &amp; &quot;&apos;s&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Returns correct plural form of the Account Name to be used in merge templates.</inlineHelpText>
        <label>Account Name Plural (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gf_sf__Administrative_Contact_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>A lookup field for designating a 2nd administrative contact for the Account. This contact in Drupal is able to edit information on behalf of their organization.</inlineHelpText>
        <label>Administrative Contact 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Administrative Contact 2)</relationshipLabel>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gf_sf__Assets__c</fullName>
        <label>Assets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>gf_sf__Billing_Contact_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>A lookup field for designating a 2nd billing contact for the Account.</inlineHelpText>
        <label>Billing Contact 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Billing Contact 2)</relationshipLabel>
        <relationshipName>Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gf_sf__Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>A lookup field for designating a billing contact for the Account</inlineHelpText>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Billing Contact)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gf_sf__Blog__c</fullName>
        <label>Blog</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>gf_sf__CRM__c</fullName>
        <inlineHelpText>The CRM system currently in use by this member.</inlineHelpText>
        <label>CRM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__Code__c</fullName>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__DBA_Name__c</fullName>
        <label>DBA Name:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>gf_sf__Date_of_First_Membership__c</fullName>
        <inlineHelpText>Enter the date this member first joined the association.</inlineHelpText>
        <label>Date of First Membership</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gf_sf__Donor_management_system__c</fullName>
        <inlineHelpText>The donor management system currently in use by this member.</inlineHelpText>
        <label>Donor management system</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__Drupal_ID__c</fullName>
        <label>Drupal ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__Drupal_Type__c</fullName>
        <label>Drupal Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__EIN__c</fullName>
        <inlineHelpText>For recording the EIN of the Account.</inlineHelpText>
        <label>EIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>gf_sf__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gf_sf__Facebook__c</fullName>
        <label>Facebook URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>gf_sf__Finance_system__c</fullName>
        <inlineHelpText>The finance system currently in use by this member.</inlineHelpText>
        <label>Finance system</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__Financial_Year_End__c</fullName>
        <label>Financial Year End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gf_sf__Focus_Area__c</fullName>
        <inlineHelpText>Use this field to select one or more picklist values to indicate focus area(s).</inlineHelpText>
        <label>Focus Area</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Disaster preparedness</fullName>
                </value>
                <value>
                    <fullName>Economic Development</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Education: Early childhood</fullName>
                </value>
                <value>
                    <fullName>Education: Higher education</fullName>
                </value>
                <value>
                    <fullName>Education: K-12</fullName>
                </value>
                <value>
                    <fullName>Education: Out-of-school time</fullName>
                </value>
                <value>
                    <fullName>Education: STEM</fullName>
                </value>
                <value>
                    <fullName>Employment/Workforce development</fullName>
                </value>
                <value>
                    <fullName>Environment</fullName>
                </value>
                <value>
                    <fullName>Environment/Sustainability</fullName>
                </value>
                <value>
                    <fullName>Equity and Inclusion</fullName>
                </value>
                <value>
                    <fullName>Families &amp; children</fullName>
                </value>
                <value>
                    <fullName>Financial literacy &amp; asset building</fullName>
                </value>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>Health access &amp; care</fullName>
                </value>
                <value>
                    <fullName>HIV/AIDS</fullName>
                </value>
                <value>
                    <fullName>Housing &amp; homelessness</fullName>
                </value>
                <value>
                    <fullName>Human Services</fullName>
                </value>
                <value>
                    <fullName>Hunger &amp; nutrition</fullName>
                </value>
                <value>
                    <fullName>Immigration &amp; refugees</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Mental health</fullName>
                </value>
                <value>
                    <fullName>Nonprofit infrastructure</fullName>
                </value>
                <value>
                    <fullName>Poverty</fullName>
                </value>
                <value>
                    <fullName>Public safety/violence prevention</fullName>
                </value>
                <value>
                    <fullName>Recreation</fullName>
                </value>
                <value>
                    <fullName>Religion</fullName>
                </value>
                <value>
                    <fullName>Science &amp; technology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gf_sf__Funder_Category__c</fullName>
        <description>Use this field to indicate the appropriate category for this funder or organization.</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Community Foundation</fullName>
                </value>
                <value>
                    <fullName>Consultant/Vendor</fullName>
                </value>
                <value>
                    <fullName>Corporate Foundation/Program</fullName>
                </value>
                <value>
                    <fullName>Donor Advised Fund</fullName>
                </value>
                <value>
                    <fullName>Educational Institution</fullName>
                </value>
                <value>
                    <fullName>Elected Official - Federal</fullName>
                </value>
                <value>
                    <fullName>Elected Official - State</fullName>
                </value>
                <value>
                    <fullName>Elected Official - Local</fullName>
                </value>
                <value>
                    <fullName>Government or Tribal Grantmaker</fullName>
                </value>
                <value>
                    <fullName>Government (Non-grantmaker)</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>National/Regional Group</fullName>
                </value>
                <value>
                    <fullName>Nonprofit</fullName>
                </value>
                <value>
                    <fullName>Operating Foundation</fullName>
                </value>
                <value>
                    <fullName>Private - Family Foundation</fullName>
                </value>
                <value>
                    <fullName>Private - Independent</fullName>
                </value>
                <value>
                    <fullName>Public/Intermediary</fullName>
                </value>
                <value>
                    <fullName>Regional Association of Grantmakers</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gf_sf__Geographic_Location__c</fullName>
        <inlineHelpText>Use this field to indicate the appropriate geographic areas of grantmaking focus.</inlineHelpText>
        <label>Geographic Funding Areas</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sample Picklist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gf_sf__Grant_Detail_Fiscal_Year__c</fullName>
        <inlineHelpText>Caution - this field integrates with Drupal</inlineHelpText>
        <label>Grant Detail Fiscal Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__Grant_management_system__c</fullName>
        <inlineHelpText>The grant management system currently in use by this member.</inlineHelpText>
        <label>Grant management system</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__Grants_Paid__c</fullName>
        <inlineHelpText>Enter in the total $$ value of grants paid in the previous fiscal year</inlineHelpText>
        <label>Grants Paid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>gf_sf__Group_Committee_Status__c</fullName>
        <inlineHelpText>Use this field to indicate active or inactive status of the Account.</inlineHelpText>
        <label>Group / Committee Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Proposed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gf_sf__Group_Start_Date__c</fullName>
        <inlineHelpText>This is the date the group was started.</inlineHelpText>
        <label>Group Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gf_sf__Group_Type__c</fullName>
        <label>Group Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Affinity Group</fullName>
                </value>
                <value>
                    <fullName>Collaborative</fullName>
                </value>
                <value>
                    <fullName>Committee</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Special</fullName>
                </value>
                <value>
                    <fullName>Sub-Committee</fullName>
                </value>
                <value>
                    <fullName>Task Force</fullName>
                </value>
                <value>
                    <fullName>Task Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gf_sf__Inc_in_Directory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inc in Directory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gf_sf__LinkedIn__c</fullName>
        <label>LinkedIn URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>gf_sf__Mailing_Address_Congressional_District__c</fullName>
        <label>Congressional District</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gf_sf__Mailing_Address_County__c</fullName>
        <label>Mailing Address - County</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__Mailing_Address_State_House__c</fullName>
        <label>State House</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gf_sf__Mailing_Address_State_Senate__c</fullName>
        <label>State Senate</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gf_sf__Membership_Status__c</fullName>
        <inlineHelpText>This field must be manually kept up-to-date.</inlineHelpText>
        <label>Membership Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Prospective</fullName>
                </value>
                <value>
                    <fullName>Former</fullName>
                </value>
                <value>
                    <fullName>Non-Member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gf_sf__Mission_Goal__c</fullName>
        <label>Mission/Goal</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>gf_sf__Number_of_Grants_Made__c</fullName>
        <inlineHelpText>Caution - this field integrates with Drupal</inlineHelpText>
        <label>Number of Grants Made</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gf_sf__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gf_sf__Physical_Address_County__c</fullName>
        <label>Physical Address - County</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__Physical_Address_Province__c</fullName>
        <label>Physical Address - Province</label>
        <length>38</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use this lookup field for designating a primary contact for the Account.</inlineHelpText>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Primary Contact)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gf_sf__RedHen_Detail_Link__c</fullName>
        <inlineHelpText>A link to the RedHen record for this Account</inlineHelpText>
        <label>RedHen Detail Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>gf_sf__Roster_Date__c</fullName>
        <label>Roster Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gf_sf__Show_in_Directory_for__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show in Directory for</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gf_sf__Sort_Name__c</fullName>
        <label>Sort Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__Staff_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GroupManagement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gf_sf__Staff_Size_Range__c</fullName>
        <inlineHelpText>Caution - this field integrates with Drupal</inlineHelpText>
        <label>Staff Size Range</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD by RA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gf_sf__Staff_Size__c</fullName>
        <label>Staff Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gf_sf__Twitter_URL__c</fullName>
        <label>Twitter URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>gf_sf__Twitter__c</fullName>
        <label>Twitter- deprecated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__Types_of_Support__c</fullName>
        <inlineHelpText>Caution - this field integrates with Drupal</inlineHelpText>
        <label>Types of Support</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD by RA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gf_sf__Unique_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gf_sf__Web_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>A lookup field for designating an administrative contact for the Account. This contact in Drupal is able to edit information on behalf of their organization.</inlineHelpText>
        <label>Administrative Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Administrative Contact)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gf_sf__Website_Link__c</fullName>
        <formula>HYPERLINK( gf_sf__website_url__c , gf_sf__website_url__c , &apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Website Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__Who_can_view_online_Committees__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Who can view online - Committees?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gf_sf__Who_can_view_online_Members__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Who can view online - Members?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gf_sf__Who_can_view_online_Non_Members__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Who can view online - Non Members?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gf_sf__Who_can_view_online_Staff__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Who can view online - Staff?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gf_sf__Year_Founded__c</fullName>
        <label>Year Founded</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__website_url__c</fullName>
        <label>Website URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__FirstDonationDate__c</fullName>
        <description>Do not manually update. Updated by automatic processes. See excluded Record Types in Household Settings.</description>
        <inlineHelpText>The oldest Close Date of a won Opportunity with amount greater than zero related to this Account.  REPLACED by First Close Date.</inlineHelpText>
        <label>DEPRECATED - First Donation Date</label>
        <summarizedField>Opportunity.CloseDate</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Amount</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>npe01__LastDonationDate__c</fullName>
        <description>Do not manually update. Updated by automatic processes. See excluded Record Types in Household Settings.</description>
        <inlineHelpText>The most recent Close Date of a won Opportunity related to this Account with amount greater than zero.  REPLACED by Last Close Date.</inlineHelpText>
        <label>DEPRECATED - Last Donation Date</label>
        <summarizedField>Opportunity.CloseDate</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Amount</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>